# NetworkMusicAppCLI

./: .gitignore  CMakeLists.txt  Dokumentacja_projektu.docx  README.md  database.cpp  database.h
Application/: main.cpp
Client/: CMakeLists.txt  main.cpp
Lib/: Admin.h  Artist.h  User.h  VirtualUser.h
Networking/: CMakeLists.txt
Networking/include/Networking/client/: tcp_client.h
Networking/include/Networking/server/: tcp_connection.h  tcp_server.h
Networking/include/Networking/server/DatabaseLib/: database.h
Networking/include/Networking/server/SongLib/: Playlist.h  Song.h
Networking/include/Networking/server/UserLib/: Admin.h  AdminArtist.h  Artist.h  User.h  VirtualUser.h
Networking/src/client/: tcp_client.cpp
Networking/src/server/: tcp_connection.cpp  tcp_server.cpp
Networking/src/server/DatabaseLib/: database.cpp
Networking/src/server/Lib/: User.cpp
Networking/src/server/SongLib/: Playlist.cpp  Song.cpp
Networking/src/server/UserLib/: Admin.cpp  AdminArtist.cpp  Artist.cpp  User.cpp
Server/: CMakeLists.txt  main.cpp
SongsLib/SongsLib/: Playlist.cpp  Playlist.h  Song.cpp  Song.h
SongsLib/SongsUnitTest/: PlaylistUnitTest.cpp  SongUnitTest.cpp
UnitTests/: CMakeLists.txt
UnitTests/DatabaseTest/: DatabaseTest.cpp
UnitTests/SongsUnitTest/: PlaylistUnitTest.cpp  SongUnitTest.cpp
UnitTests/UserUnitTest/: UserUnitTest.cpp
public/lyrics/: text1.txt  text10.txt  text11.txt  text12.txt  text13.txt  text14.txt  text15.txt  text16.txt  text17.txt  text18.txt  text19.txt  text2.txt  text20.txt  text21.txt  text22.txt  text23.txt  text24.txt  text25.txt  text26.txt  text27.txt  text28.txt  text29.txt  text3.txt  text30.txt  text4.txt  text5.txt  text6.txt  text7.txt  text8.txt  text9.txt
public/songs/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
users/admin/: credentials.txt
users/aidax/: credentials.txt
users/hanja/: credentials.txt
users/hanja/userPlaylists/: Party.txt
users/taylor/: credentials.txt
